--- a/.github/workflows/TriggerADO.yml
+++ b/.github/workflows/TriggerADO.yml
@@ -4,7 +4,7 @@ name: Trigger ADO Pipeline
 # This triggers the ADO Pipeline with issue information
 on:
   issues:
-    types: [opened]
+    types: [opened, closed, reopened]
 
 permissions:
   contents: read
@@ -37,29 +37,41 @@ jobs:
             const issue_title = issue.title;
             const issue_body = issue.body;
             const issue_state = issue.state; // "open", "closed", etc.
-
+            
             // Retrieve comments using octokit
             const comments = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issue_number
             });
-
+            
             // Collect comments in JSON format as an array
             const comment_list = comments.data.map(comment => ({
               user: comment.user.login,
               body: comment.body,
               created_at: comment.created_at
             }));
-
-            // Return issue details and comments in JSON format
-            return {
+            
+            const output = {
               issue_number: issue_number,
               issue_title: issue_title,
               issue_body: issue_body,
               issue_state: issue_state,
-              comments: JSON.stringify(comment_list)
+              comments: comment_list
             };
+            
+            const issueData = JSON.stringify(output);
+            console.log("Output:", issueData);
+            
+            core.exportVariable('ISSUE_DATA', issueData);
+
+      - name: Parse issue details from environment variable
+        run: |
+          echo "Issue Data: $ISSUE_DATA"
+          echo "Issue Number: $(echo $ISSUE_DATA | jq -r '.issue_number')"
+          echo "Issue Title: $(echo $ISSUE_DATA | jq -r '.issue_title')"
+          echo "Issue State: $(echo $ISSUE_DATA | jq -r '.issue_state')"
+          echo "Comments: $(echo $ISSUE_DATA | jq -r '.comments')"
 
       - name: Azure CLI
         uses: azure/cli@v2
@@ -67,19 +79,11 @@ jobs:
           ado-org: ${{ secrets.ADO_ORGANIZATION }}
           ado-project: ${{ secrets.ADO_PROJECT }}
           ado-pipeline-id: ${{ secrets.ADO_PIPELINE_ID }}
-          issue-number: ${{ steps.issue_details.outputs.issue_number }}
-          issue-title: ${{ steps.issue_details.outputs.issue_title }}
-          issue-body: ${{ steps.issue_details.outputs.issue_body }}
-          issue-state: ${{ steps.issue_details.outputs.issue_state }}
-          comments: ${{ steps.issue_details.outputs.comments }}
         with:
           inlineScript: |
             az pipelines build queue \
               --definition-id ${{ env.ado-pipeline-id }} \
               --organization ${{ env.ado-org }} \
               --project ${{ env.ado-project }} \
-              --variables issue_number=${{ env.issue-number }} \
-                          issue_title="${{ env.issue-title }}" \
-                          issue_body="${{ env.issue-body }}" \
-                          issue_state="${{ env.issue_state }}" \
-                          comments="${{ env.comments }}"
+              --variables issue_data=${{ env.ISSUE_DATA }} \
+              --debug --verbose
